              (instead of starting with an empty configuration).
            - In the relation types configuration, you can now edit the "minimal display" value for standard types.
            - A view which displays all "FileRefs" (temporary files) has been added; it's only available for staff users.
        * Persons :
            - A new optional field has been added to 'Organisation': "code".
              You can use it to distinguish you managed organisations when you get several ones.
              Upgrade note:
                if you upgrade from an instance of Creme 2.6, you have to configure your blocks to display
                this field if you want to see it. As the field is optional, you can also hide it to remove
                it everywhere (notably forms).
            - A new optional field has been added to 'Organisation': "eori".
              This field stores the Economic Operators Registration and Identification number required for custom clearance
              regarding import and export in/out of the EU.
        * Documents :
            - A new field, automatically filled, has been added to Document: "file_size".
        * Activities :
            - A field of 'Activity', "Fixed or floating?" (internal name: 'floating_type') is now visible.
            - A "card" brick is now available for the hat of the Activities' detail-view.
              It's used by default by the new installations.
        * Billing :
            - The number generation has been heavily reworked. The old number generation system
              took a prefix in settings & generated numbers in the form "PREFIX15".
              The new system can be visually configured & is more powerful :
                - The configuration takes now a format string; there are a mandatory variable "{counter}",
                  but also "{year}", "{month}" & "{code}" (which corresponds to the new field 'Organisation.code').